<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
  
	<groupId>org.perfmon4j</groupId>
	<artifactId>perfmon4j-project</artifactId>
	<version>1.6.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>org.perfmon4j:perfmon4j-project</name>
	<description>A java instrumentation agent to monitor server performance in production application servers</description>
	<url>https://github.com/FollettSchoolSolutions/perfmon4j</url>
	<licenses>
		<license>
			<name>The GNU Lesser General Public License, version 3.0</name>
			<url>http://opensource.org/licenses/LGPL-3.0</url>
		</license>
	</licenses>
	<developers>
    	<developer>
      		<name>David Deuchert</name>
      		<email>perfmon4j@fsc.follett.com</email>
      		<organization>Follett School Solutions</organization>
      		<organizationUrl>https://www.follett.com/</organizationUrl>
    	</developer>
	</developers>
	<scm>
  		<connection>git@github.com:FollettSchoolSolutions/perfmon4j.git</connection>
		<developerConnection>git@github.com:FollettSchoolSolutions/perfmon4j.git</developerConnection>
		<url>https://github.com/FollettSchoolSolutions/perfmon4j</url>
	</scm>

	<modules>
		<module>agent-api</module>
		<module>dbupgrader</module>
		<module>base</module>
		<module>servlet</module>
		<module>tomcat7</module>
		<module>tomcat55</module>
		<module>jbossweb7</module>
		<module>sunjava6</module>
		<module>reportconsole</module>
		<module>utils</module>
		<module>webapp</module>
		<module>wildfly8</module>
 	</modules>

	<profiles>
	 	<profile> 
			<!--  This profile must be included when using either the mvnCentral or github profile-->
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.3</version>
						<configuration>
							<doctitle>${project.name} ${project.version}</doctitle>
							<windowtitle>${project.name} ${project.version}</windowtitle>        			
							<source>11</source>
						</configuration>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.4</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<!-- Prevent gpg from using pinentry programs -->
							<gpgArguments>
							<arg>--pinentry-mode</arg>
							<arg>loopback</arg>
							</gpgArguments>
						</configuration>						
					</plugin>
				</plugins>
			</build>
	  	</profile>
	 	<profile> 
			<!-- This profile must be activated along with the release profile
				To activate add "-P release,mvnCentral" to the maven command line -->
			<id>mvnCentral</id>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>			
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
	  	</profile>
	 	<profile> 
			<!-- This profile must be activated along with the release profile
				To activate add "-P release,github" to the maven command line -->
			<id>github</id>
			<distributionManagement>
				<repository>
					<id>github</id>
					<url>https://maven.pkg.github.com/FollettSchoolSolutions/perfmon4j</url>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
			</distributionManagement>			
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>github</serverId>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
	  	</profile>
	</profiles>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.1</version>
			</plugin>

			<plugin>
			   <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <version>3.8.0</version>
			    <configuration>
			        <release>11</release>
			    </configuration>
			</plugin>
	
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<descriptors>
						<descriptor>src/assembly/src.xml</descriptor>
						<descriptor>src/assembly/bin.xml</descriptor>
					</descriptors>
					<appendAssemblyId>true</appendAssemblyId>
				</configuration>
				<executions />
			</plugin>
		</plugins>
	</build>

	<properties>
		<javassist.version>3.27.0-GA</javassist.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<DERBY_VERSION>10.10.2.0</DERBY_VERSION>
		<LOG4J_VERSION>1.2.14</LOG4J_VERSION>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${LOG4J_VERSION}</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>${javassist.version}</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.5</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
